# RoboCrypto

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  RoboCrypto.cpp  build.sh  configure.sh  notes.txt  tasks.txt
.trunk/: trunk.yaml
charts/: ma_crossover.xlsx
include/: output.h
include/bypto/: account.h  exchange.h  order.h  order_type.h  strategy.h
include/bypto/common/: csv.h  either.h  math.h  std.h  types.h  utils.h
include/bypto/data/: binance.h  kline.h  klines.h  price.h  prices.h  spot.h
include/bypto/data/binance/: klines.h
include/bypto/exchange/: back_testing.h  backtest.h  binance.h  byptobot.h  runner.h
include/bypto/indicator/: trend.h
include/bypto/order/: base.h  fill.h  generic.h  order.h  order_info.h  order_type.h  types.h
include/bypto/strategy/: crossover.h  decision.h  ma.h
include/robocrypto/: robo_crypto.h
src/: CMakeLists.txt  command.h  exchange.h  main.cpp  options.h  output.cpp
src/bypto/: account.cpp  order.cpp  order_type.cpp  robo_crypto.cpp
src/bypto/common/: csv.cpp  types.cpp  utils.cpp
src/bypto/data/: binance.cpp  kline.cpp  klines.cpp  spot.cpp
src/bypto/data/binance/: klines.cpp
src/bypto/exchange/: back_testing.cpp  backtest.cpp  binance.cpp
src/bypto/order/: fill.cpp  generic.cpp  order_type.cpp  types.cpp
src/robocrypto/: robo_crypto.cpp
